force-app/main/default/objects/AddTrip__c/AddTrip__c.object-meta.xml
<CustomObject>
    <label>AddTrip</label>
    <nameField>
        <label>AddTrip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AddTrip</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>