force-app/main/default/objects/AddTrip__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>