force-app/main/default/objects/AddTrip__c/fields/Image_Upload__c.field-meta.xml
<CustomField>
    <fullName>Image_Upload__c</fullName>
    <inlineHelpText>upload image of upcoming  trip location</inlineHelpText>
    <label>Image Upload</label>
    <type>Url</type>
</CustomField>