force-app/main/default/objects/AddTrip__c/fields/PlaceName__c.field-meta.xml
<CustomField>
    <fullName>PlaceName__c</fullName>
    <label>PlaceName</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>